sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: ';' expected but ')' found.
      ecart = ecart.toDouble/1.3).toInt
                                ^